images/ipc4/ocp-agent-install/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: install-iso
  labels:
    app.kubernetes.io/name: install-iso
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: install-iso
    app.kubernetes.io/part-of: bootstrap
spec:
  serviceAccountName: ansible-runner
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  restartPolicy: Never
  volumes:
    - name: playbook
      configMap:
        name: create-install-iso-playbook
    - name: agent-config
      configMap:
        name: agent-config
        items:
          - key: agent-config.yaml
            path: agent-config.yaml
    - name: install-config
      configMap:
        name: install-config
        items:
          - key: install-config.yaml
            path: install-config.yaml
    - name: output
      persistentVolumeClaim:
        claimName: installer-iso
    - name: create-iso-scratch
      emptyDir: {}
    - name: ansible-scratch
      emptyDir: {}
    - name: installer-cache
      emptyDir: {}
  containers:
    - name: host-iso
      image: registry.access.redhat.com/ubi9/httpd-24
      ports:
        - containerPort: 8080
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        capabilities:
          drop:
            - ALL
      volumeMounts:
        - name: output
          mountPath: /var/www/html
