images/ipc4/ocp-agent-install/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: serve-iso
spec:
  selector:
    app.kubernetes.io/name: install-iso
  ports:
    - name: http
      port: 8080
      targetPort: 8080
