images/ipc4/ocp-agent-install/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: serve-iso
spec:
  to:
    kind: Service
    name: serve-iso
  port:
    targetPort: http
  tls:
    termination: edge
